# FSM-Synthesizer

./: CMakeLists.txt  README.md  run_test.bat  test_build.bat
arch/: Class Diagram_1.oob  Class Diagram_1.oom  Class Diagram_2.oom
int_set/: CMakeLists.txt  int_set.cpp  int_set.h  int_set.h.in
machine_matrix/: CMakeLists.txt  Machine_Matrix.h.in  cell.cpp  cell.h  machine_matrix.cpp  machine_matrix.h
main/: CMakeLists.txt  main.cpp
position/: CMakeLists.txt  position.cpp  position.h  position.h.in
positions_map/: CMakeLists.txt  include  iterator.cpp  iterator.h  positions_map.cpp  positions_map.h  positions_map.h.in
unit_tests/: CMakeLists.txt  test_int_set.cpp  test_machine_matrix.cpp  test_position.cpp  test_positions_map.cpp
